tdf#68183 sw: config option for disabling the creation of automatic RSID marks

It was a problem since the initial commit
062eaeffe7cb986255063bb9b0a5f3fb3fc8e34c (sw: Improved document
comparison based on RSIDs., 2011-12-22) that this new feature -- which
is annoying for some use-cases -- could not be disabled, let's allow
that.

Change-Id: I33fa77382919586fb00198246f737caa68dcbd85
Reviewed-on: https://gerrit.libreoffice.org/14277
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>